fixed .scene for better anim visibility

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -17,6 +17,7 @@ body {
   scroll-behavior: smooth;
   max-width: 100vw;
   overflow-x: hidden;
+
 }
 
 
@@ -34,18 +35,23 @@ a {
 canvas {
 
   width: 100%;
-  max-height: calc(50*var(--vh));
+  height: calc(50*var(--vh));
   object-fit: cover;
   object-position: 50% 50%;
 
 }
 
 section {
+  background-color: white;
 
   @media screen and (min-width: 900px) {
     height: calc(100*var(--vh));
     width: 100%;
   }
+}
+
+.trigger {
+  background-color: transparent;
 }
 
 .hero {
@@ -80,6 +86,7 @@ section {
 }
 
 .intro {
+
   display: flex;
   justify-content: space-between;
 
@@ -117,12 +124,15 @@ section {
 
 
 .scene {
+  
   display: flex;
   align-items: center;
 
   flex-direction: column;
   justify-content: flex-start;
-
+  position: fixed;
+  top: 0;
+  z-index: -1;
   @media screen and (max-width: 900px) {
     canvas {
       height: 100vw;
@@ -161,7 +171,6 @@ section {
     width: 100%;
     justify-content: space-around;
     align-items: center;
-
     @media screen and (max-width: 900px) {
       flex-direction: column;
       justify-content: flex-start;
@@ -171,7 +180,7 @@ section {
       font-size: calc(3 *var(--vh));
       text-align: justify;
       width: calc(50% - 4rem);
-
+      margin: 0;
       @media screen and (max-width: 900px) {
         width: calc(100% - 4rem);
       }
@@ -180,8 +189,10 @@ section {
 }
 
 .job-options {
+  
   display: flex;
   align-items: center;
+ 
 
   @media screen and (max-width: 900px) {
     flex-direction: column;
@@ -283,3 +294,4 @@ footer {
   align-items: center;
   width: 100%;
 }
+
